added logo name and user img

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand pull-left" href="#"> <img src="img/logo.jpg" class="logo"></a>
+                    <a class="navbar-brand pull-left" href="#">JANUX</a>
                 </div>
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right ">
