--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.1/Chart.min.js"></script> 
     </head>
     <body>
-        <nav class="navbar navbar-inverse ">
+        <nav class="navbar navbar-inverse">
             <div class="container-fluid">
-                <div class="navbar-header ">
+                <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
@@ -22,10 +22,10 @@
                     <a class="navbar-brand pull-left" href="#">JANUX</a>
                 </div>
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav navbar-right ">
-                        <li><a href="#">Sign In</a></li>
-                        <li><a href="#">Sign In</a></li>
-                        <li><a href="#">Sign In</a></li>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="#"><span class="label label-danger label-as-badge">7</span><i class=" glyphicon glyphicon-bell"></i></a></li>
+                        <li><a href="#"><span class="label label-danger label-as-badge">5</span><i class=" glyphicon glyphicon-calendar"></i></a></li>
+                        <li><a href="#"><span class="label label-danger label-as-badge">4</span><i class=" glyphicon glyphicon-envelope"></i></a></li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span><img id="profile" src="img/VaultBoyFO3.png" class="img-circle"></span>Vault Guy<span class="caret"></span></a>
                             <ul class="dropdown-menu">
