--- a/index.html
+++ b/index.html
@@ -10,60 +10,76 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.1/Chart.min.js"></script> 
     </head>
     <body>
-        <nav class="navbar navbar-inverse">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand pull-left" href="#">JANUX</a>
-                </div>
-                <ul class="nav navbar-nav navbar-right top-nav">
-                    <li><a href="#"><span class="label label-danger label-as-badge">7</span><i class=" glyphicon glyphicon-bell"></i></a></li>
-                    <li><a href="#"><span class="label label-danger label-as-badge">5</span><i class=" glyphicon glyphicon-calendar"></i></a></li>
-                    <li><a href="#"><span class="label label-danger label-as-badge">4</span><i class=" glyphicon glyphicon-envelope"></i></a></li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span><img id="profile" src="img/VaultBoyFO3.png" class="img-circle"></span>Vault Guy<span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Profile</a></li>
-                            <li><a href="#">Settings</a></li>
-                        </ul>
-                    </li>
-                </ul>
-                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                     <ul class="nav navbar-nav side-nav">
-                        <li>
-                            <a href="#"><i class=""></i> Dashboard</a>
-                        </li>
-                        <li>
-                            <a href="#"><i class=""></i> Charts</a>
-                        </li>
-                        <li>
-                            <a href="#"><i class=""></i> </i> Tables</a>
-                        </li>
-                        <li>
-                            <a href="#"><i class=""></i> </i> Forms</a>
-                        </li>
-                        <li>
-                            <a href="#"><i class=""></i> </i> Bootstrap Elements</a>
-                        </li>
-                        <li>
-                            <a href="#"><i class=""></i>  Bootstrap Grid</a>
-                        </li>
-                        
-                        <li>
-                            <a href="#"><i class=""></i>  Blank Page</a>
-                        </li>
-                        <li>
-                            <a href="#"><i class=""></i>  RTL Dashboard</a>
+        <div id="wrapper">
+            <nav class="navbar navbar-inverse navbar fixed-top">
+                <div class="container-fluid">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand pull-left" href="#">JANUX</a>
+                    </div>
+                    <ul class="nav navbar-nav navbar-right top-nav">
+                        <li><a href="#"><span class="label label-danger label-as-badge">7</span><i class=" glyphicon glyphicon-bell"></i></a></li>
+                        <li><a href="#"><span class="label label-danger label-as-badge">5</span><i class=" glyphicon glyphicon-calendar"></i></a></li>
+                        <li><a href="#"><span class="label label-danger label-as-badge">4</span><i class=" glyphicon glyphicon-envelope"></i></a></li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span><img id="profile" src="img/VaultBoyFO3.png" class="img-circle"></span>Vault Guy<span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="#">Profile</a></li>
+                                <li><a href="#">Settings</a></li>
+                            </ul>
                         </li>
                     </ul>
+                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                         <ul class="nav navbar-nav side-nav">
+                            <li>
+                                <a href="#"><i class=""></i> Dashboard</a>
+                            </li>
+                            <li>
+                                <a href="#"><i class=""></i> Charts</a>
+                            </li>
+                            <li>
+                                <a href="#"><i class=""></i> </i> Tables</a>
+                            </li>
+                            <li>
+                                <a href="#"><i class=""></i> </i> Forms</a>
+                            </li>
+                            <li>
+                                <a href="#"><i class=""></i> </i> Bootstrap Elements</a>
+                            </li>
+                            <li>
+                                <a href="#"><i class=""></i>  Bootstrap Grid</a>
+                            </li>
+
+                            <li>
+                                <a href="#"><i class=""></i>  Blank Page</a>
+                            </li>
+                            <li>
+                                <a href="#"><i class=""></i>  RTL Dashboard</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+            <div id="page-wrapper">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="panel panel-primary">
+                                <div class="panel-heading">
+                                    <button class="glyphicon glyphicon-user" role="button"></button>   
+                                </div>
+                                <div class="panel-body">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </nav>
-
+        </div>
     </body>
 </html>
